Fix layout with floated images on small screen

--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -63,6 +63,8 @@
   h4,
   h5,
   h6 {
+    clear: both;
+    overflow: hidden;
     font-weight: 600;
 
     &.thin {
@@ -125,9 +127,13 @@
       }
     }
   }
-}
 
-abbr[title] {
-  text-decoration: none;
-}
+  abbr[title] {
+    text-decoration: none;
+  }
 
+  p {
+    clear: both;
+    overflow: hidden;
+  }
+}
